--- a/El Pollo Loco/index.html
+++ b/El Pollo Loco/index.html
@@ -16,10 +16,14 @@
     <script src="./js/game.js" defer></script>
 </head>
 
-<body onload="init()" style="background-color: rgb(228, 161, 98);"></body>
+<body onload="init()">
+    <section class="mexican-section">
+        <h1 class="mexican-title">El pollo loco</h1>
 
-<h1>El pollo loco</h1>
-<canvas id="canvas" width="720" height="480"></canvas>
+        <canvas id="canvas" width="720" height="480"></canvas>
+    </section>
+
+    <div id="brownGround"></div>
 </body>
 
 </html>
